objects/Payment__c.object
<CustomObject>
    <label>Vergütung</label>
    <nameField>
        <label>Vergütung Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vergütungen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Einheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Einheit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <label>Faktor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Honorar__c</fullName>
        <label>Honorar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dienstart__c</fullName>
        <label>Dienstart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dienstart</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vergütungen</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifikation__c</fullName>
        <label>Qualifikation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Qualifikationsstufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceHealthcareInstitution__c</fullName>
        <label>Preis Klinik</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>